--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "DualInfodose App",
-  "short_name": "DualInfodose",
+  "short_name": "Dual_0S4",
   "start_url": "./index.html",
   "display": "standalone",
   "orientation": "portrait",
